# goverment-id

./: Cargo.toml  README.md
examples/: check-fns.rs  cli-bic.rs  cli-bik.rs  cli-inn.rs  cli-kpp.rs  cli-rrc.rs  cli-tax-id.rs  command-line.rs
src/: bic.rs  bik.rs  checkers.rs  common.rs  error.rs  inn.rs  kpp.rs  lib.rs  main.rs  reason_code.rs  tax_id.rs  unit_test.rs
src/fns_service/: http.rs  mod.rs  nds_response.rs  partner.rs  transforms.rs
src/fns_service/rpser/: mod.rs  xml.rs
